fixed dashboard layout bug

--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -15,6 +15,7 @@
 }
 
 .dashboard__container {
+  table-layout: auto;
   border-spacing: 0px;
   display: table;
   box-sizing: border-box;
@@ -43,16 +44,19 @@
   letter-spacing: 0.4px;
   font-weight: 300;
 }
-.dashboard__title {
+.dashboard__title-row {
   margin: 0;
   text-align: left;
-  color: #1976d2;
-  font-size: 17px;
   vertical-align: baseline;
   text-align: center;
   padding: 1.2em 0.7em;
   font-size: 15px;
   border-bottom: 1px solid rgba(224, 224, 224, 1);
+}
+
+.dashboard__title {
+  color: #1976d2;
+  font-size: 17px;
 }
 
 .th {
